--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+
+
+
+
 *{
 	padding: 0;
 	margin: 0;
@@ -32,14 +36,14 @@ body
 
 .options-container{
 	width: 100vw;
-	height: 100vh;
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	grid-gap: 30rem;
-	padding-top: 33rem ;
+	padding-top: 26rem;
 	padding-left: 15rem;
 	padding-right: 15rem;
 }
+
 
 
 .img{
@@ -82,6 +86,8 @@ form h2{
 	color: #333;
 
 }
+
+
 
 .input-div{
 	position: relative;
@@ -141,6 +147,21 @@ form h2{
   background-color: #fe7879;
 }
 
+.l{
+	width: 135px;
+	height: 100%;
+  width: 60%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
+  right: 0;
+  background-color: none;
+  
+}
+
+
 
 
 .input{
@@ -158,6 +179,16 @@ form h2{
 	color: #333;
 
 }
+
+.tt{
+
+	
+	font-size: 1rem;
+	font-family: 'Poppins',sans-serif;
+	color: #333;
+}
+
+
 .btn{
 	display: block;
 	width: 100%;
@@ -189,6 +220,7 @@ form h2{
 	background: #fe7879;
 }
 
+
 .btn:hover{
 	background: #ffffff;
 	color: #333;
@@ -204,6 +236,7 @@ form h2{
 	color: #333;
 
 }
+
 
 
 
